--- a/style.css
+++ b/style.css
@@ -1,5 +1,6 @@
 
 * {
+    
     margin: 0;
     padding: 0;
     box-sizing: border-box;
@@ -399,7 +400,131 @@ footer .copyright  i:hover {
     color: #a5c8f8;;
 }
 
+/* Login Window */
+#body {
 
+    background-image: url('img/background_home.jpg');
+    width: 100%;
+    height: 100%;
+    background-size: cover;
+    background-repeat: no-repeat;
+    
+}
+
+#contentlogin {
+    display: flex;
+    justify-content: flex-end; 
+    align-items: center; 
+    padding: 50px 50px 5px 50px;
+    margin-bottom: 3px;
+}
+    
+#contentlogin .login {
+
+    display: flex;
+    flex-direction: column;
+    justify-content: center;
+    align-items: center;
+    width: 50%;
+    height: 80vh;
+    background: rgba(255, 255, 255, 0.15); /* Semi-transparent background */
+    backdrop-filter: blur(2px); /* Applies blur effect */
+    border-radius: 8px;
+    box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2); /* Add shadow for emphasis */
+    color: white;
+    
+}
+
+#contentlogin .login h1 {
+    font-size: 40px;
+    
+}
+
+#contentlogin .login p {
+    padding-bottom: 40px;
+}
+
+#contentlogin .login input {
+    
+    height: 1.4rem;
+    padding: 1em 0;
+    font-size: 15px;
+    width: 40%;
+    border: 1px solid transparent;
+    border-radius: 4px;
+    background-color: transparent;
+    color: #fff;
+    outline: none;
+
+}
+
+#contentlogin input::placeholder {
+    color: #e0d7d7;
+    font-size: 15px;
+}
+
+#contentlogin .password i {
+    font-size: 12px;
+}
+
+#contentlogin .separator {
+    
+        width: 40% ;
+        height: .5px ;
+        background-color: #e0d7d7;
+        margin-bottom: 30px ;
+    
+}
+
+#contentlogin  button {
+    font-size: 18px;
+    font-weight: 800;
+    background-color: transparent;
+    color: #fff;
+    transition: 0.9s ease;  
+    margin-bottom: 30px ;
+    
+}
+
+#contentlogin  button:hover {
+   
+    color: #313e4c;
+}
+
+#contentlogin .register {
+    font-size: 18px;
+    color: #fff
+}
+
+#contentlogin .register:hover {
+    color : #313e4c;
+}
+
+#loginfooter .copyright {
+    display: flex;
+    justify-content: space-between;
+    align-items: flex-start;
+    font-size: 18px;
+    color: #fff;
+    padding: 10px;
+}
+
+#loginfooter .copyright a {
+
+    text-decoration: none;
+    color: #fff;
+    
+}
+
+#loginfooter .copyright i {
+    padding: 8px;
+    font-size: 22px;
+    cursor: pointer;
+}
+
+#loginfooter .copyright  i:hover {
+    color: #a5c8f8;
+}
 
 
 @media  (max-width:799px) {
@@ -508,6 +633,46 @@ footer .copyright  i:hover {
     footer .imgFormobile {
         display: none;
     }
+
+    #body {
+        
+        background-size:auto;
+        background-repeat: no-repeat;
+       
+    }
+
+    #contentlogin .login {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width : 90%;
+        height: 45vh;
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(2px);
+        border-radius: 8px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        color: white;
+        margin-top: 450px;
+
+    }
+
+    #contentlogin .login input {
+        height: 1.7rem;
+        padding: 1em 0;
+        font-size: 17px;
+        width: 70%;
+        
+    }
+
+    #contentlogin .login input::placeholder {
+        font-size: 18px;
+    }
+
+    #contentlogin .separator {
+        width: 70%;
+
+    }
 }
 
 
@@ -528,7 +693,10 @@ footer .copyright  i:hover {
     }
 
     #content {
+
         width: 130%;
+     
+        
     }
 
     #subscribe {
@@ -623,7 +791,7 @@ footer .copyright  i:hover {
 
 
     footer .copyright i {
-        
+
         padding: 5px;
         font-size: 15px;
         cursor: pointer;
@@ -631,6 +799,62 @@ footer .copyright  i:hover {
     }
 
     footer .socialmedia {
+        padding: 5px;
+    }  
+
+
+    #body {
+        
+        background-size:auto;
+        background-repeat: no-repeat;
+       
+    }
+
+    #contentlogin {
+        
+        width: 130%;
+      
+        background-size: auto ;
+
+ 
+        
+    }
+    /* Login & register pages */
+    #contentlogin .login {
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+        width: 130%;
+        height: 58vh;
+        background: rgba(255, 255, 255, 0.15);
+        backdrop-filter: blur(2px);
+        border-radius: 8px;
+        box-shadow: 0 4px 15px rgba(0, 0, 0, 0.2);
+        color: white;
+        margin-top: 450px;
+    }
+
+
+
+    #loginfooter .copyright {
+        display: flex;
+        align-items: center;
+        width: 130%;
+        font-size: 15px;
+        justify-content: space-between;
+    }
+
+
+    #loginfooter .copyright i {
+
+        padding: 5px;
+        font-size: 15px;
+        cursor: pointer;
+        font-weight: 800;
+    }
+
+    #loginfooter .socialmedia {
         padding: 5px;
     }  
     
